make sure easter egg is hidden by default

--- a/sass/components/_easteregg.scss
+++ b/sass/components/_easteregg.scss
@@ -1,5 +1,5 @@
 .c-easteregg {
-	// display: none;
+	display: none;
 	width: 100%;	
 	height: 100%;
 	position: fixed;
@@ -10,6 +10,10 @@
 	text-align: center;
 	&--show {
 		display: block;
+	}
+	&__title {
+		position: relative;
+		z-index: 9;
 	}
 	&__bd {
 		width: 40rem;
